// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IAMPolicyDocumentValidator invalid effect 1`] = `
Array [
  Object {
    "message": "must be one of Allow, Deny, got \\"foo\\"",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Effect",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
]
`;

exports[`IAMPolicyDocumentValidator invalid principal: {"AWS":[{}]} 1`] = `
Array [
  Object {
    "message": "must be a String, got [{}] or must be a String, got {}",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "PolicyDocument",
      "Statement",
      "0",
      "Principal",
      "AWS",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
]
`;

exports[`IAMPolicyDocumentValidator invalid principal: {"AWS":{}} 1`] = `
Array [
  Object {
    "message": "must be a String, got {} or must be a List, got {}",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "PolicyDocument",
      "Statement",
      "0",
      "Principal",
      "AWS",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
]
`;

exports[`IAMPolicyDocumentValidator invalid principal: {"Federated":[]} 1`] = `
Array [
  Object {
    "message": "must be a String, got []",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "PolicyDocument",
      "Statement",
      "0",
      "Principal",
      "Federated",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
]
`;

exports[`IAMPolicyDocumentValidator invalid principal: {"Federated":[{}]} 1`] = `
Array [
  Object {
    "message": "must be a String, got [{}]",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "PolicyDocument",
      "Statement",
      "0",
      "Principal",
      "Federated",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
]
`;

exports[`IAMPolicyDocumentValidator invalid principal: {"Service":[{}]} 1`] = `
Array [
  Object {
    "message": "must be a String, got [{}] or must be a String, got {}",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "PolicyDocument",
      "Statement",
      "0",
      "Principal",
      "Service",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
]
`;

exports[`IAMPolicyDocumentValidator invalid principal: {"Service":{}} 1`] = `
Array [
  Object {
    "message": "must be a String, got {} or must be a List, got {}",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "PolicyDocument",
      "Statement",
      "0",
      "Principal",
      "Service",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
]
`;

exports[`IAMPolicyDocumentValidator invalid principal: {} 1`] = `
Array [
  Object {
    "message": "you must provide one of AWS, Federated, CanonicalUser, Service",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "PolicyDocument",
      "Statement",
      "0",
      "Principal",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
]
`;

exports[`IAMPolicyDocumentValidator invalid types 1`] = `
Array [
  Object {
    "message": "must be a String, got []",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Sid",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
  Object {
    "message": "must be a String, got []",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Effect",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
  Object {
    "message": "you must provide one of AWS, Federated, CanonicalUser, Service",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Principal",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
  Object {
    "message": "must be a String, got {} or must be a List, got {}",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Resource",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
  Object {
    "message": "must be an Object, got \\"\\"",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Condition",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
]
`;

exports[`IAMPolicyDocumentValidator invalid, statement single value 1`] = `
Array [
  Object {
    "message": "must be a String, got []",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "Effect",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
]
`;

exports[`IAMPolicyDocumentValidator missing required properties 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Effect",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Action",
    ],
    "source": "IAMPolicyDocumentValidator",
  },
]
`;
